[package]
name = "rolling"
version = "0.2.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ordered-float="4.5"
smallvec={ version = "1.13", features = ["serde"] }
regex="1.11"
structopt="0.3"
failure = "0.1"
failure_derive="0.1"
log = "0.4"


[lib]
crate-type=["rlib","staticlib"]

